--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -11,8 +11,21 @@ h1 {
 p {
     color: green;
     font-size: 24pt;
+    text-align: center;
+}
+#important_paragraph:hover {
+	background-color: yellow;
+	font-size: 40px;	
 }
 
 a {
     color:red;
+}
+
+a:hover {
+background-color: blue;
+}
+
+.less_important_paragraph:hover{
+	color: blue;
 }
