--- a/lab2_styles.css
+++ b/lab2_styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    text-align: center;
 }
 
 h1 {
@@ -8,6 +9,7 @@ h1 {
     text-align: center;
     background-color: blue;
     opacity: .5;
+
 }
 
 p {
@@ -16,24 +18,32 @@ p {
     background-color: lightgreen;
     opacity: .5;
     width: 60%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
 }
 
 a {
     color:red;
     background-color: pink;
     opacity: .5;
+    text-align: center;
 }
 
 span {
 	background-color: yellow;
     opacity: 1;	
+    
 }
 
 form {
 	height: 200px;
 	width: 400px;
 	background-color: orange;
-    opacity: .9;	
+    opacity: .9;
+    margin: auto;
+
 }
 
 input {
@@ -46,5 +56,10 @@ div {
 	width: 400px;
 	background-color: blue;
     opacity: .7;
+
     	
+}
+
+div>p{
+    margin-left: -80px
 }
